--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build": "cross-env API_ENV=PROD react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server"
+    "server": "node public/main.js"
   },
   "eslintConfig": {
     "extends": "react-app"
