--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,7 +7,7 @@ media_folder: "static/assets/images" # Media files will be stored in the repo un
 public_folder: "/assets/images" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
-  - name: "weboosh-home" # Used in routes, e.g., /admin/collections/blog
+  - name: "weboosh-core" # Used in routes, e.g., /admin/collections/blog
     label: "Weboosh CMS" # Used in the UI
     folder: "weboosh-home" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
