--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start:qa": "cross-env API_ENV=QA react-scripts start",
     "start:utt": "cross-env API_ENV=UTT react-scripts start",
     "start:prod": "cross-env API_ENV=PROD react-scripts start",
-    "build": "cross-env API_ENV=PROD react-scripts build",
+    "build": "node public/main.js && cross-env API_ENV=PROD react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node public/main.js"
