Update package json BUILD

--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "start:qa": "cross-env API_ENV=QA react-scripts start",
     "start:utt": "cross-env API_ENV=UTT react-scripts start",
     "start:prod": "cross-env API_ENV=PROD react-scripts start",
-    "build": "node public/main.js && cross-env API_ENV=PROD react-scripts build",
+    "build": "cross-env API_ENV=PROD react-scripts build",
+    "build:netlify": "node public/main.js && cross-env API_ENV=PROD react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node public/main.js"
+    "server": "node server.js",
+    "server:netlify": "node public/main.js"
   },
   "eslintConfig": {
     "extends": "react-app"
